# adblocker

./: CMakeLists.txt  binoc.build  build  build.mk  chrome.manifest  chrome.manifest.in  configure.in  confvars.sh  install.rdf  install.rdf.in  jar.mn  metadata  project.binocbuild  update.xml.in
src/: CMakeLists.txt  chrome.manifest.in  install.rdf.in  manifest.ini.in
src/chrome/content/ui/: about.xul  composer.xul  fennecSettings.xul  filters-filterview.js  filters.xul  firstRun.js  overlay.js  sendReport.xul  sidebar.js  sidebar.xul  sidebarDetached.xul  subscriptionSelection.js  subscriptionSelection.xul  subscriptions.xml  utils.js
src/chrome/locale/ar/: filters.dtd  global.properties
src/chrome/locale/bg/: sendReport.dtd
src/chrome/locale/ca/: sendReport.dtd
src/chrome/locale/cs/: sendReport.dtd
src/chrome/locale/da/: global.properties
src/chrome/locale/de/: firstRun.dtd
src/chrome/locale/el/: sendReport.dtd
src/chrome/locale/en-GB/: global.properties  sendReport.dtd
src/chrome/locale/en-US/: about.dtd
src/chrome/locale/eo/: sendReport.dtd
src/chrome/locale/es-MX/: global.properties
src/chrome/locale/et/: global.properties  sendReport.dtd
src/chrome/locale/fa/: filters.dtd  firstRun.dtd  sendReport.dtd  sidebar.dtd
src/chrome/locale/fi/: global.properties  sendReport.dtd
src/chrome/locale/fr/: global.properties
src/chrome/locale/fy-NL/: sendReport.dtd
src/chrome/locale/gl/: global.properties  overlay.dtd  sendReport.dtd  sidebar.dtd
src/chrome/locale/he/: global.properties  sendReport.dtd
src/chrome/locale/hr/: sendReport.dtd
src/chrome/locale/hsb/: global.properties  sendReport.dtd
src/chrome/locale/hu/: global.properties  sendReport.dtd
src/chrome/locale/hy-AM/: filters.dtd  firstRun.dtd  global.properties  sidebar.dtd
src/chrome/locale/it/: global.properties  sendReport.dtd
src/chrome/locale/ja/: global.properties  sendReport.dtd
src/chrome/locale/ka-GE/: composer.dtd  global.properties  subscriptionSelection.dtd
src/chrome/locale/ko/: global.properties
src/chrome/locale/lv/: composer.dtd  filters.dtd  overlay.dtd
src/chrome/locale/mn/: global.properties  overlay.dtd  sidebar.dtd
src/chrome/locale/nl/: global.properties
src/chrome/skin/: firstRun.css
src/components/: CMakeLists.txt  Initializer.js  Initializer.js.in
src/content/: CMakeLists.txt  about.js.in  composer.xul.in  fennecContent.js  fennecContent.js.in  firstRun.xul.in  navigatorOverlay.xul.in  overlayGeneral.xul.in  phoenixOverlay.xul.in  settings.xul.in  sidebar.js.in  sidebar.xul.in  subscriptionSelection.xul.in
src/content/ui/: CMakeLists.txt  about.js  about.js.in  about.xul.in  composer.xul  fennecSettings.xul  filters-subscriptionactions.js  filters-subscriptionview.js  filters.xul  filters.xul.in  firefoxOverlay.xul  firefoxOverlay.xul.in  firstRun.js  firstRun.xul  firstRun.xul.in  overlay.js.in  overlayGeneral.xul  overlayGeneral.xul.in  sendReport.xul  sendReport.xul.in  settings.xul  settings.xul.in  sidebar.js.in  sidebar.xul.in  sidebarDetached.xul  sidebarDetached.xul.in  subscriptionSelection.xul.in  utils.js  utils.js.in
src/defaults/: CMakeLists.txt
src/defaults/preferences/: CMakeLists.txt  adblockplus.js  adblockplus.js.in
src/locale/: CMakeLists.txt
src/locale/ar/: sendReport.dtd
src/locale/bg/: global.properties
src/locale/ca/: filters.dtd  global.properties
src/locale/cs/: global.properties
src/locale/da/: sendReport.dtd
src/locale/de/: about.dtd  filters.dtd  global.properties  sendReport.dtd
src/locale/el/: global.properties
src/locale/en-US/: CMakeLists.txt  about.dtd.in  composer.dtd.in  filters.dtd  filters.dtd.in  firstRun.dtd  firstRun.dtd.in  global.properties  global.properties.in  overlay.dtd  overlay.dtd.in  sendReport.dtd  sendReport.dtd.in  sidebar.dtd.in  subscriptionSelection.dtd.in
src/locale/eo/: global.properties
src/locale/es-AR/: global.properties  sendReport.dtd
src/locale/es-ES/: global.properties  sendReport.dtd
src/locale/es-MX/: sendReport.dtd
src/locale/fa/: global.properties  overlay.dtd
src/locale/fr/: sendReport.dtd
src/locale/fy-NL/: filters.dtd  global.properties
src/locale/gl/: filters.dtd
src/locale/hr/: global.properties
src/locale/hy-AM/: overlay.dtd  sendReport.dtd
src/locale/is/: global.properties  sendReport.dtd
src/locale/ka-GE/: about.dtd  filters.dtd
src/locale/kk-KZ/: global.properties  sendReport.dtd
src/locale/ko/: sendReport.dtd
src/locale/lt/: global.properties  sendReport.dtd
src/locale/lv/: about.dtd  global.properties  sendReport.dtd  sidebar.dtd
src/locale/mn/: filters.dtd  subscriptionSelection.dtd
src/locale/ms-MY/: global.properties  sendReport.dtd
src/locale/nl/: sendReport.dtd
src/locale/pt-BR/: global.properties
src/locale/pt-PT/: global.properties
src/locale/ro/: firstRun.dtd  sendReport.dtd
src/locale/ru/: filters.dtd  global.properties
src/locale/sl/: overlay.dtd  sendReport.dtd
src/locale/sq/: filters.dtd  global.properties  sendReport.dtd  sidebar.dtd
src/locale/th/: global.properties
src/locale/tr/: global.properties  sendReport.dtd
src/locale/uk/: firstRun.dtd  global.properties
src/locale/vi/: global.properties  overlay.dtd  sidebar.dtd
src/locale/zh-CN/: sendReport.dtd
src/locale/zh-TW/: sendReport.dtd
src/modules/: AppIntegration.jsm  AppIntegration.jsm.in  AppIntegrationFennec.jsm  AppIntegrationFennec.jsm.in  Bootstrap.jsm  Bootstrap.jsm.in  CMakeLists.txt  ContentPolicy.jsm  ContentPolicy.jsm.in  ContentPolicyRemote.jsm  ContentPolicyRemote.jsm.in  ElemHide.jsm  ElemHide.jsm.in  ElemHideRemote.jsm  ElemHideRemote.jsm.in  FilterClasses.jsm  FilterClasses.jsm.in  FilterListener.jsm  FilterListener.jsm.in  FilterStorage.jsm  FilterStorage.jsm.in  IO.jsm  IO.jsm.in  Matcher.jsm  Matcher.jsm.in  ObjectTabs.jsm  ObjectTabs.jsm.in  Prefs.jsm  Prefs.jsm.in  Public.jsm  Public.jsm.in  RequestNotifier.jsm  RequestNotifier.jsm.in  SubscriptionClasses.jsm  SubscriptionClasses.jsm.in  Sync.jsm  Sync.jsm.in  Synchronizer.jsm  Synchronizer.jsm.in  Utils.jsm  (+1 more)
src/skin/: CMakeLists.txt
(+105 files in other folders)
