AC_SUBST(BINOC_ADDON_ID)
AC_DEFINE(BINOC_ADDON_ID)

AC_SUBST(BINOC_ADDON_CREATOR)
AC_DEFINE(BINOC_ADDON_CREATOR)

AC_SUBST(BINOC_ADDON_VERSION)
AC_DEFINE(BINOC_ADDON_VERSION)

AC_SUBST(BINOC_ADDON_XPI_NAME)
AC_DEFINE(BINOC_ADDON_XPI_NAME)

AC_SUBST(BINOC_ADDON_NAME)
AC_DEFINE(BINOC_ADDON_NAME)

AC_SUBST(BINOC_ADDON_DESCRIPTION)
AC_DEFINE(BINOC_ADDON_DESCRIPTION)

AC_SUBST(BINOC_ADDON_CHROME_NAME)
AC_DEFINE(BINOC_ADDON_CHROME_NAME)